tests/compile_fail/too_many_keys.rs
use bevy_input_sequence::*;

fn main() {
    let _ = key!(A B);
}
