tests/compile_fail/too_many_keys.stderr
error: Too many tokens; use keyseq! for multiple keys
 --> tests/compile_fail/too_many_keys.rs:4:20
  |
4 |     let _ = key!(A B);
  |                    ^
